@@ -118,34 +118,37 @@ METHODS
 
 ERRORS
      new():
-             Parameter 'hash_type' is required.
-             Parameter 'hash_type' must be a 'Data::HashType' object.
-                     Value: %s
-                     Reference: %s
-             Parameter 'id' must be a natural number.
-                     Value: %s
-             Parameter 'login_name' has length greater than '50'.
-                     Value: %s
-             Parameter 'login_name' is required.
-             Parameter 'password_hash' has length greater than '128'.
-                     Value: %s
-             Parameter 'password_hash' is required.
-             Parameter 'roles' must be a array.
-                     Value: %s
-                     Reference: %s
-             Parameter 'valid_from' is required.
-             Parameter 'valid_from' must be a 'DateTime' object.
-                     Value: %s
-                     Reference: %s
-             Parameter 'valid_to' must be a 'DateTime' object.
-                     Value: %s
-                     Reference: %s
-             Parameter 'valid_to' must be older than 'valid_from' parameter.
-                     Value: %s
-                     Valid from: %s
-             Roles isn't 'Data::Login::Role' object.
-                     Value: %s
-                     Reference: %s
+             From Mo::utils:
+                     Parameter 'hash_type' is required.
+                     Parameter 'hash_type' must be a 'Data::HashType' object.
+                             Value: %s
+                             Reference: %s
+                     Parameter 'id' must be a natural number.
+                             Value: %s
+                     Parameter 'login_name' has length greater than '50'.
+                             Value: %s
+                     Parameter 'login_name' is required.
+                     Parameter 'password_hash' has length greater than '128'.
+                             Value: %s
+                     Parameter 'password_hash' is required.
+                     Parameter 'valid_from' is required.
+                     Parameter 'valid_from' must be a 'DateTime' object.
+                             Value: %s
+                             Reference: %s
+                     Parameter 'valid_to' must be a 'DateTime' object.
+                             Value: %s
+                             Reference: %s
+                     Parameter 'valid_to' must be older than 'valid_from' parameter.
+                             Value: %s
+                             Valid from: %s
+
+             From Mo::utils::Array::check_array_object():
+                     Parameter 'roles' must be a array.
+                             Value: %s
+                             Reference: %s
+                     Parameter 'roles' with array must contain 'Data::Login::Role' objects.
+                             Value: %s
+                             Reference: %s
 
 EXAMPLE
      use strict;
@@ -232,7 +235,7 @@ EXAMPLE
      # Valid from: 2024-01-01
 
 DEPENDENCIES
-    DateTime, Error::Pure, Mo, Mo::utils.
+    DateTime, Error::Pure, Mo, Mo::utils, Mo::utils::Array.
 
 REPOSITORY
     <https://github.com/michal-josef-spacek/Data-Login>
