@@ -1,4 +1,5 @@
 0.05
+ - Move check_array_object() to Mo::utils::Array.
  - Update copyright years.
 
 0.04 2024-05-27T19:41:28+02:00
